Added AllowedCodesRule